remove onViolation boolean return

--- a/src/generators/javascript/index.hbs
+++ b/src/generators/javascript/index.hbs
@@ -37,7 +37,7 @@ export type ViolationHandler = (
 	message: {{#if isBrowser}}Record<string, any>{{else}}Segment.TrackMessage<Record<string, any>>{{/if}},
 	{{!-- Swap the type definitions here so we don't want depend on ajv in production just for this type definition. --}}
 	violations: {{#if isDevelopment}}Ajv.ErrorObject{{else}}any{{/if}}[]
-) => boolean
+) => void
 
 {{#if isDevelopment}}
 {{#if needsJSDoc}}
@@ -66,8 +66,6 @@ export const defaultValidationErrorHandler: ViolationHandler = (message, violati
 	}
 	{{/unless}}
 	console.warn(msg)
-
-	return false
 }
 
 let onViolation = defaultValidationErrorHandler
@@ -114,7 +112,6 @@ export interface TypewriterOptions {
 	 *
 	 * By default, it will throw errors if NODE_ENV = "test" so that tests will fail
 	 * if a message does not match the spec. Otherwise, errors will be logged to stderr.
-	 * Also by default, messages that generate Violations will be dropped.
 	 */
 	onViolation?: ViolationHandler
 }
@@ -136,7 +133,6 @@ export interface TypewriterOptions {
  * 		if the message should still be sent to Segment. This handler does not fire in production mode, because it requires
  * 		inlining the full JSON Schema spec for each event in your Tracking Plan. By default, it will throw errors if NODE_ENV
  * 		= "test" so that tests will fail if a message does not match the spec. Otherwise, errors will be logged to stderr.
- * 		Also by default, messages that generate Violations will be dropped.
  {{/if}}
  */
 export function setTypewriterOptions(options: TypewriterOptions) {
@@ -150,7 +146,7 @@ export function setTypewriterOptions(options: TypewriterOptions) {
 /**
 	* Validates a message against a JSON Schema using Ajv. If the message
 	* is invalid, the `onViolation` handler will be called.
-	* Returns true if the message should be sent on to Segment, and false otherwise.
+	* Returns a boolean indicating if the message should be sent on to Segment.
 	*/
 function matchesSchema(
 	message: {{#if isBrowser}}Record<string, any>{{else}}Segment.TrackMessage<Record<string, any>>{{/if}},
@@ -161,7 +157,8 @@ function matchesSchema(
 	ajv.addMetaSchema(require('ajv/lib/refs/json-schema-draft-04.json'))
 
 	if (!ajv.validate(schema, message) && ajv.errors) {
-		return onViolation(message, ajv.errors)
+		onViolation(message, ajv.errors)
+		return false
 	}
 
 	return true
