--- a/src/generators/javascript/segment.hbs
+++ b/src/generators/javascript/segment.hbs
@@ -24,7 +24,7 @@ export { default as AnalyticsNode } from 'analytics-node'
  */
 export interface TrackMessage<PropertiesType> extends Options, Record<string, any> {
   /** The ID for this user in your database. */
-  userId: string | number
+  userId?: string | number
   /** An ID to associated with the user when you don’t know who they are. */
   anonymousId?: string | number
   /** A dictionary of properties for the event. */
