migrate iOS to new generation method

--- a/src/generators/ios/templates/analytics.h.hbs
+++ b/src/generators/ios/templates/analytics.h.hbs
@@ -4,7 +4,7 @@
 #import <Foundation/Foundation.h>
 #import <Analytics/SEGAnalytics.h>
 #import <Analytics/SEGSerializableValue.h>
-{{#each classes}}
+{{#each objects}}
 #import "{{name}}.h"
 {{/each}}
 
