--- a/src/generators/javascript/segment.hbs
+++ b/src/generators/javascript/segment.hbs
@@ -16,7 +16,8 @@ declare global {
 /** The callback exposed by analytics.js. */
 export type Callback = () => void
 {{else}}
-export { default as AnalyticsNode } from 'analytics-node'
+import AnalyticsNode from 'analytics-node'
+export { AnalyticsNode }
 
 /**
  * TrackMessage represents a message payload for an analytics `.track()` call.
@@ -49,11 +50,7 @@ export interface Options {
   * https://segment.com/docs/sources/website/analytics.js/#selecting-destinations
   */
   integrations?: {
-    All?: boolean
-    AppsFlyer?: {
-      appsFlyerId: string
-    }
-    [key: string]: boolean | { [key: string]: any }{{#if isBrowser}} | undefined{{/if}}
+    [key: string]: boolean | { [key: string]: any }
   }
   /**
   * A dictionary of extra context to attach to the call.
