remove undefined type from window.analytics

--- a/src/generators/javascript/segment.hbs
+++ b/src/generators/javascript/segment.hbs
@@ -9,7 +9,7 @@
  */
 declare global {
 	interface Window {
-		analytics?: SegmentAnalytics.AnalyticsJS
+		analytics: SegmentAnalytics.AnalyticsJS
 	}
 }
 
