--- a/src/generators/javascript/index.hbs
+++ b/src/generators/javascript/index.hbs
@@ -105,8 +105,7 @@ export interface TypewriterOptions {
 	 */
 	analytics{{#if isBrowser}}?{{/if}}: {{#if isBrowser}}SegmentAnalytics.AnalyticsJS{{else}}Segment.AnalyticsNode{{/if}}
 	/**
-	 * Handler fired when if an event does not match its spec. Returns a boolean
-	 * indicating if the message should still be sent to Segment. This handler
+	 * Handler fired when if an event does not match its spec. This handler
 	 * does not fire in production mode, because it requires inlining the full
 	 * JSON Schema spec for each event in your Tracking Plan.
 	 *
@@ -129,10 +128,10 @@ export interface TypewriterOptions {
  * @typedef {Object} TypewriterOptions
  * @property {{#if isBrowser}}{Segment.AnalyticsJS}{{else}}{Segment.AnalyticsNode}{{/if}} {{#if isBrowser}}[analytics]{{else}}analytics{{/if}} - Underlying analytics instance where analytics
  * 		calls are forwarded on to.{{#if isBrowser}} Defaults to window.analytics.{{/if}}
- * @property {Function} [onViolation] - Handler fired when if an event does not match its spec. Returns a boolean indicating
- * 		if the message should still be sent to Segment. This handler does not fire in production mode, because it requires
- * 		inlining the full JSON Schema spec for each event in your Tracking Plan. By default, it will throw errors if NODE_ENV
- * 		= "test" so that tests will fail if a message does not match the spec. Otherwise, errors will be logged to stderr.
+ * @property {Function} [onViolation] - Handler fired when if an event does not match its spec. This handler does not fire in
+ * 		production mode, because it requires inlining the full JSON Schema spec for each event in your Tracking Plan. By default,
+ * 		it will throw errors if NODE_ENV="test" so that tests will fail if a message does not match the spec. Otherwise, errors
+ * 		will be logged to stderr.
  {{/if}}
  */
 export function setTypewriterOptions(options: TypewriterOptions) {
