Add README documentation

--- a/src/cli/typewriter.yml.hbs
+++ b/src/cli/typewriter.yml.hbs
@@ -7,7 +7,7 @@ scripts:
 {{/if}}
 
 # You can find more documentation on configuring this client in the Segment docs.
-# See: https://segment.com/docs/typewriter/{{client.language}}
+# See: https://segment.com/docs/protocols/typewriter/{{client.language}}
 client:
   {{#each client}}
   {{@key}}: {{this}}
