--- a/src/generators/javascript/templates/index.hbs
+++ b/src/generators/javascript/templates/index.hbs
@@ -115,25 +115,7 @@ export interface TypewriterOptions {
 	onViolation?: ViolationHandler
 }
 
-/**
- * Updates the run-time configuration of this Typewriter client.
- {{#unless isBrowser}}
- * This function must be called with a configured analytics-node instance before firing
- * any analytics calls, or else a `missingAnalyticsNodeError` error will be thrown.
- {{/unless}}
- {{#if needsJSDoc}}
- *
- * @param {TypewriterOptions} options - the options to upsert
- *
- * @typedef {Object} TypewriterOptions
- * @property {{#if isBrowser}}{Segment.AnalyticsJS}{{else}}{Segment.AnalyticsNode}{{/if}} {{#if isBrowser}}[analytics]{{else}}analytics{{/if}} - Underlying analytics instance where analytics
- * 		calls are forwarded on to.{{#if isBrowser}} Defaults to window.analytics.{{/if}}
- * @property {Function} [onViolation] - Handler fired when if an event does not match its spec. This handler does not fire in
- * 		production mode, because it requires inlining the full JSON Schema spec for each event in your Tracking Plan. By default,
- * 		it will throw errors if NODE_ENV="test" so that tests will fail if a message does not match the spec. Otherwise, errors
- * 		will be logged to stderr.
- {{/if}}
- */
+{{> setTypewriterOptionsDocumentation}}
 export function setTypewriterOptions(options: TypewriterOptions) {
 	analytics = options.analytics ? () => options.analytics{{#if isBrowser}} || window.analytics{{/if}} : analytics
 	{{#if isDevelopment}}
@@ -209,22 +191,8 @@ function withTypewriterContext{{#unless isBrowser}}<P, T extends Segment.TrackMe
 {{/if}}
 
 {{#each tracks}}
+{{> functionDocumentation isBrowser=../isBrowser needsJSDoc=../needsJSDoc }}
 {{#if ../isBrowser}}
-/**
- {{#if functionDescription}}
- * {{functionDescription}}
- {{else}}
- * Fires a '{{rawEventName}}' track call.
- {{/if}}
- {{#if ../needsJSDoc}}
- *
- {{!-- Note: this uses whitespace control to "escape" the outer curly braces. --}}
- * @param { {{~propertiesType~}} } {{#if isPropertiesOptional}}[props]{{else}}props{{/if}} - The analytics properties that will be sent to Segment.
- * @param {Object} [options] - A dictionary of options. For example, enable or disable specific destinations for the call.
- * @param {Function} [callback] - An optional callback called after a short timeout after the analytics
- * 		call is fired.
- {{/if}}
- */
 export function {{functionName}}(
 	props{{#if isPropertiesOptional}}?{{/if}}: {{propertiesType}},
 	options?: Segment.Options,
@@ -251,20 +219,6 @@ export function {{functionName}}(
 	}
 }
 {{else}}
-/**
- {{#if functionDescription}}
- * {{functionDescription}}
- {{else}}
- * Fires a '{{rawEventName}}' track call.
- {{/if}}
- {{#if ../needsJSDoc}}
- *
- {{!-- Note: this uses whitespace control to "escape" the outer curly braces. --}}
- * @param {TrackMessage<{{propertiesType}}>} message - The analytics properties that will be sent to Segment.
- * @param {Function} [callback] - An optional callback called after a short timeout after the analytics
- * 		call is fired.
- {{/if}}
- */
 export function {{functionName}}(
 	message: Segment.TrackMessage<{{propertiesType}}>,
 	callback?: Segment.Callback
@@ -292,8 +246,10 @@ export function {{functionName}}(
 
 {{#if useProxy}}
 const clientAPI = {
+	{{> setTypewriterOptionsDocumentation}}
 	setTypewriterOptions,
 	{{#each tracks}}
+	{{> functionDocumentation isBrowser=../isBrowser needsJSDoc=../needsJSDoc }}
 	{{functionName}},
 	{{/each}}
 }
