Remove backticks from names
This appears to be a TypeScript error with parsing JSDoc that uses
backticks to represent names with spaces in JSDoc. I'll investigate this
further later on. In the future, you can recreate with gateway-api
and backticks around names in the property JSDoc, then running tslint.

You will get an error like this:

```
$ npx tslint --project tsconfig.json --exclude './src/lib/typewriter/app/*.ts' --exclude './src/lib/typewriter/devCenter/*.ts'
...
Error: Debug Failure.
    at Object.assertDefined (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:2068:24)
    at /Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:15118:89
    at String.replace (<anonymous>)
    at formatStringFromArgs (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:15118:21)
    at Object.createFileDiagnostic (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:15134:20)
    at parseErrorAtPosition (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:17576:42)
    at parseErrorAt (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:17583:13)
    at parseErrorAtCurrentToken (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:17570:13)
    at createMissingNode (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:17815:17)
    at parseExpectedTokenJSDoc (/Users/colinking/dev/src/github.com/segmentio/gateway-api/node_modules/typescript/lib/typescript.js:17740:17)
```

--- a/src/generators/javascript/templates/index.hbs
+++ b/src/generators/javascript/templates/index.hbs
@@ -180,9 +180,10 @@ function withTypewriterContext{{#unless isBrowser}}<P, T extends Segment.TrackMe
  {{/if}}
  * @typedef {{name}}
  {{#each properties}}
-  {{!-- Note: this uses whitespace control to "escape" the outer curly braces. --}}
+	{{!-- Note: this uses whitespace control to "escape" the outer curly braces. --}}
 	{{!-- Note: The backticks enable JSDoc to parse names with spaces (without resorting to square brackets). --}}
- * @property { {{~type~}} } {{#if isRequired}}`{{name}}`{{else}}[{{name}}]{{/if}} - {{description}}
+	{{!-- Temporary removed backticks around required names below because of typescript compiler + JSDoc error. Will investigate. --}}
+ * @property { {{~type~}} } {{#if isRequired}}{{name}}{{else}}[{{name}}]{{/if}} - {{description}}
  {{/each}}
  */
 {{/each}}
