--- a/src/generators/javascript/templates/index.hbs
+++ b/src/generators/javascript/templates/index.hbs
@@ -260,9 +260,8 @@ export default new Proxy<typeof clientAPI>(clientAPI, {
 
 		return () => {
 			console.warn(`⚠️  You made an analytics call (${String(method)}) that can't be found. Either:
-    a) Re-generate your typewriter client: \`npm run typewriter\`
-		{{!-- TODO(colinking): provide workspace / tp id --}}
-    b) Add it to your Tracking Plan: https://app.segment.com/TODO/tracking-plans/TODO`)
+    a) Re-generate your typewriter client: \`npx typewriter\`
+    b) Add it to your Tracking Plan: {{trackingPlanURL}}`)
 			const a = analytics()
 			if (a) {
 				{{#if isBrowser}}
