Add enum support to JS
- Refactors generic generator types so that each generator only specifies additive properties
- Adds enums to the generator
- Implements enums for JS
- Udpates the schema types for each generator method to be specific to the type
- Dedupes enums with object-hash
- Fixes a few lint errors
- Fixes typewriter's analytics to use enum

--- a/src/generators/javascript/templates/index.hbs
+++ b/src/generators/javascript/templates/index.hbs
@@ -33,6 +33,14 @@ export interface {{name}} {
 }
 {{/each}}
 
+{{#each enums}}
+export enum {{name}} {
+	{{#each values}}
+	{{name}} = '{{value}}',
+	{{/each}}
+}
+{{/each}}
+
 export type ViolationHandler = (
 	message: {{#if isBrowser}}Record<string, any>{{else}}Segment.TrackMessage<Record<string, any>>{{/if}},
 	{{!-- Swap the type definitions here so we don't want depend on ajv in production just for this type definition. --}}
