--- a/tests/e2e/android-java/app/src/main/res/layout-v26/activity_main.xml
+++ b/tests/e2e/android-java/app/src/main/res/layout-v26/activity_main.xml
@@ -13,7 +13,7 @@
       android:ems="10"
       android:id="@+id/productNameEditText" app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp" android:layout_marginStart="24dp"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:autofillHints=""
       android:hint="@string/product_name"/>
   <Button
       android:text="@string/send_message"
