add SEG prefix to abstract class

--- a/src/generators/android/templates/typewriterUtils.java.hbs
+++ b/src/generators/android/templates/typewriterUtils.java.hbs
@@ -32,8 +32,8 @@ public final class TypewriterUtils {
       for(Object item : props) {
         if(item instanceof List) {
           p.add(serialize((List) item));
-        } else if(item instanceof Serializable){
-          p.add(((Serializable) item).toProperties());
+        } else if(item instanceof SEGSerializable){
+          p.add(((SEGSerializable) item).toProperties());
         }else{
           p.add(item);
         }
