update PHONY in makefile, remove SEG prefix, update serialize method param modifier, use version/language from context

--- a/src/generators/android/templates/typewriterUtils.java.hbs
+++ b/src/generators/android/templates/typewriterUtils.java.hbs
@@ -11,8 +11,8 @@ public final class TypewriterUtils {
 
   static {
     typewriterCtx = new HashMap<>();
-    typewriterCtx.put("version", "7.0.1");
-    typewriterCtx.put("language", "java");
+    typewriterCtx.put("version", "{{typewriterVersion}}");
+    typewriterCtx.put("language", "{{language}}");
   }
 
   protected static Options addTypewriterContext(final @NonNull Options options){
@@ -26,14 +26,14 @@ public final class TypewriterUtils {
     return typewriterContext;
   }
 
-  protected static List<?> serialize(final @NonNull List<?> props){
+  protected static List<?> serialize(final @Nullable List<?> props){
     List p = new ArrayList<>();
     if(props instanceof List){
       for(Object item : props) {
         if(item instanceof List) {
           p.add(serialize((List) item));
-        } else if(item instanceof SEGSerializable){
-          p.add(((SEGSerializable) item).toProperties());
+        } else if(item instanceof SerializableProperties){
+          p.add(((SerializableProperties) item).toProperties());
         }else{
           p.add(item);
         }
