--- a/src/generators/android/templates/class.java.hbs
+++ b/src/generators/android/templates/class.java.hbs
@@ -8,7 +8,7 @@ import com.segment.analytics.Properties;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-public final class {{name}} extends SEGSerializable {
+public final class {{name}} extends SerializableProperties {
   private Properties properties;
 
   {{propertiesGetterSetter name}}
