--- a/src/generators/android/templates/analytics.java.hbs
+++ b/src/generators/android/templates/analytics.java.hbs
@@ -31,7 +31,8 @@ public class TypewriterAnalytics {
   *{{functionDescription}}
   {{/if}}
   {{#if propsParam}}
-  {{descriptionComment this}}
+  * @param props {@link {{name}} to add extra information to this call.
+  * @see <a href="https://segment.com/docs/spec/track/">Track Documentation</a>
   {{/if}}
   */
   {{trackCallFunctionSignature this false}} {{trackCallFunctionExecution this false}};
@@ -41,7 +42,8 @@ public class TypewriterAnalytics {
   * {{functionDescription}}
   {{/if}}
   {{#if propsParm}}
-  {{descriptionComment this}}
+  * @param props {@link {{name}} to add extra information to this call.
+  * @see <a href="https://segment.com/docs/spec/track/">Track Documentation</a>
   {{/if}}
   */
   {{trackCallFunctionSignature this true}} {{trackCallFunctionExecution this true}};
