--- a/src/generators/android/templates/class.java.hbs
+++ b/src/generators/android/templates/class.java.hbs
@@ -11,7 +11,13 @@ import androidx.annotation.Nullable;
 public final class {{name}} extends SerializableProperties {
   private Properties properties;
 
-  {{propertiesGetterSetter name}}
+  private {{name}}(Properties properties) {
+    this.properties = properties;
+	}
+
+  protected Properties toProperties() {
+    return properties;
+	}
 
   /**
   * Builder for {@link {{name ~}} }
@@ -38,7 +44,7 @@ public final class {{name}} extends SerializableProperties {
      * This property is optional and not required to generate a valid {{../name}} object
      {{/if}}
      */
-    {{builderFunctionSignature name modifiers type}} {
+    public Builder {{name}}({{modifiers}} {{type}} {{name}}) {
     {{builderFunctionBody name rawName type}}
     } 
     
@@ -49,8 +55,10 @@ public final class {{name}} extends SerializableProperties {
     */
     public {{name}} build() {
   {{#each properties}}
-    {{#if (shouldThrowWhenNull this)}}
-      {{runtimeRequiredCheck ../name this}}
+    {{#if shouldThrowWhenNull}}
+      if(properties.get("${property.rawName}") == null){
+        throw new IllegalArgumentException({{../name}} missing required property: {{rawName}};
+      }
     {{/if}}
   {{/each}}
       return new {{name}}(properties);
