--- a/src/generators/android/templates/analytics.java.hbs
+++ b/src/generators/android/templates/analytics.java.hbs
@@ -31,7 +31,7 @@ public class TypewriterAnalytics {
   *{{functionDescription}}
   {{/if}}
   {{#if propsParam}}
-  * @param props {@link {{name}} to add extra information to this call.
+  * @param props {@link {{class ~}} } to add extra information to this call.
   * @see <a href="https://segment.com/docs/spec/track/">Track Documentation</a>
   {{/if}}
   */
@@ -42,7 +42,7 @@ public class TypewriterAnalytics {
   * {{functionDescription}}
   {{/if}}
   {{#if propsParm}}
-  * @param props {@link {{name}} to add extra information to this call.
+  * @param props {@link {{class ~}} } to add extra information to this call.
   * @see <a href="https://segment.com/docs/spec/track/">Track Documentation</a>
   {{/if}}
   */
